# brag_docs

./: .gitignore  .markdownlint.jsonc  .prettierrc.json  .yamllint.yml  Makefile  README.md  main.py  netlify.toml  pyproject.toml
.github/workflows/: README.md  deploy.yml
_brag_docs/docs/: brag_doc_2022.md  brag_doc_2023.md  brag_doc_2024.md  brag_doc_2025.md  brag_doc_2026.md  brag_doc_template.md
docs/: brag_doc_2022.md  brag_doc_2024.md
scripts/: setup-netlify.sh
web/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/.next/: BUILD_ID  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
web/.next/cache/: .tsbuildinfo
web/.next/cache/webpack/client-production/: index.pack
web/.next/cache/webpack/edge-server-production/: index.pack
web/.next/cache/webpack/server-production/: 0.pack  (+1 more)
web/.next/server/: functions-config-manifest.json  middleware-build-manifest.js  pages-manifest.json
web/.next/server/chunks/: 357.js  399.js
web/.next/server/pages/: 2023.json  2025.html  404.html  500.html  [year].js  [year].js.nft.json  _app.js  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json  index.html  index.js  index.json
web/.next/static/chunks/: 506-2599daa5c3278ad9.js
web/.next/static/css/: f516d06b8e88806d.css
web/components/: TableOfContents.tsx  ThemeProvider.tsx  ThemeToggle.tsx
web/lib/: docs.ts
web/pages/: [year].tsx  _app.tsx  globals.css  index.tsx
(+3 files in other folders)
